force-app/main/default/objects/Book__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Author</label>
    <referenceTo>Author__c</referenceTo>
    <relationshipLabel>Books</relationshipLabel>
    <relationshipName>Books</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>