force-app/main/default/objects/Book__c/fields/Book_ID__c.field-meta.xml
<CustomField>
    <fullName>Book_ID__c</fullName>
    <displayFormat>B-{00000}</displayFormat>
    <label>Book ID</label>
    <type>AutoNumber</type>
</CustomField>