force-app/main/default/objects/Book__c/fields/Cover_Photo__c.field-meta.xml
<CustomField>
    <fullName>Cover_Photo__c</fullName>
    <label>Cover Photo</label>
    <type>Url</type>
</CustomField>