force-app/main/default/objects/Book__c/fields/No_of_Reviews__c.field-meta.xml
<CustomField>
    <fullName>No_of_Reviews__c</fullName>
    <label>No of Reviews</label>
    <summaryForeignKey>Review__c.Book__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>