force-app/main/default/objects/Book__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Book_Category__c.Parent_Category__c</field>
            <operation>equals</operation>
            <valueField>$Source.Category__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Book_Category__c</referenceTo>
    <relationshipLabel>Books (Sub Category)</relationshipLabel>
    <relationshipName>Books1</relationshipName>
    <type>Lookup</type>
</CustomField>