force-app/main/default/objects/Book__c/listViews/Academic_Educational_Books.listView-meta.xml
<ListView>
    <fullName>Academic_Educational_Books</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Academic &amp; Educational</value>
    </filters>
    <label>Academic &amp; Educational Books</label>
</ListView>