force-app/main/default/objects/Book__c/listViews/Business_Economics.listView-meta.xml
<ListView>
    <fullName>Business_Economics</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Business &amp; Economics</value>
    </filters>
    <label>Business &amp; Economics</label>
</ListView>