force-app/main/default/objects/Book__c/listViews/Children_s_Books.listView-meta.xml
<ListView>
    <fullName>Children_s_Books</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Children&apos;s Books</value>
    </filters>
    <label>Children&apos;s Books</label>
</ListView>