force-app/main/default/objects/Book__c/listViews/Fiction_Books.listView-meta.xml
<ListView>
    <fullName>Fiction_Books</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Fiction</value>
    </filters>
    <label>Fiction Books</label>
</ListView>