force-app/main/default/objects/Book__c/listViews/Non_Fiction_Books.listView-meta.xml
<ListView>
    <fullName>Non_Fiction_Books</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Non-Fiction</value>
    </filters>
    <label>Non Fiction Books</label>
</ListView>