force-app/main/default/objects/Book__c/listViews/Religious_Spiritual.listView-meta.xml
<ListView>
    <fullName>Religious_Spiritual</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Religious &amp; Spiritual</value>
    </filters>
    <label>Religious &amp; Spiritual</label>
</ListView>